--- a/site_templete/index.html
+++ b/site_templete/index.html
@@ -59,7 +59,7 @@
                     <circle cx="174.901" cy="100.353" r="28.0989" />
                     <circle cx="174.901" cy="173.181" r="28.0989" />
                 </svg>
-                <img class="w-[55rem] h-[40rem] px-4 rounded-[5rem] py-4"
+                <img class="w-[55rem] h-[40rem] object-cover px-4 rounded-[5rem] py-4"
                     src="img/annie-spratt-sggw4-qDD54-unsplash.jpg" alt="">
             </div>
         </section>
